--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ botocore==1.12.91
 Click==7.0
 docutils==0.14
 Flask==1.0.2
+Flask-Mail==0.9.1
 Flask-WTF==0.14.2
 gunicorn==19.9.0
 itsdangerous==1.1.0
