--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Click==7.0
 docutils==0.14
 Flask==1.0.2
 Flask-Mail==0.9.1
+Flask-MySQLdb==0.2.0
 Flask-WTF==0.14.2
 gunicorn==19.9.0
 itsdangerous==1.1.0
