--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,11 @@ psycopg2-binary = "*"
 flask = "*"
 flask-sqlalchemy = "*"
 gunicorn = "*"
+boto = "*"
+boto3 = "*"
+botocore = "*"
+flask-mail = "*"
+python-dotenv = "*"
 
 [requires]
 python_version = "3.7"
