--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ flask-sqlalchemy = "*"
 gunicorn = "*"
 flask-mail = "*"
 python-dotenv = "*"
+Flask-Limiter = "*"
 
 [requires]
 python_version = "3.7"
