--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
+    "crypto-js": "^4.1.1",
     "lodash": "^4.17.21"
-  },
-  "browser": {
-    "crypto": false
   }
 }
