create endpoint to retrieve cached game data if key is found, and another to register data if not found, use vanilla src rendering w/cdn over webpack bundling

--- a/Pipfile
+++ b/Pipfile
@@ -14,7 +14,8 @@ gunicorn = "*"
 flask-mail = "*"
 python-dotenv = "*"
 Flask-Limiter = "*"
-redis="*"
+flask_redis = "*"
+redis = "2.10.6"
 
 [requires]
 python_version = "3.7"
