--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "My portfolio. Technology stack is HTML, flask and AWS S3 bucket only to write in legacy version(currently disabled in this version). Hosted on heroku, using postgres add-on for database. This version is just representing the structure of what I want my final version to have, using different and more personally preferred web stacks.",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "prod": "webpack && python app.py"
+    "start": "npm-run-all --parallel watch:modules watch:server",
+    "watch:server": "python app.py",
+    "watch:modules": "webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/Alvarian/portfolio1#readme",
   "devDependencies": {
+    "npm-run-all": "^4.1.5",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2"
   },
