redo gallery with redis all projects, stage register_cache with redis to return proper string encryption from one project

--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,7 @@ verify_ssl = true
 
 [packages]
 boto3 = "*"
-pycrypto = "*"
+pycryptodome = "*"
 zipfile36 = "*"
 psycopg2 = "*"
 psycopg2-binary = "*"
