--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,25 @@
 version: "3"
 services:  
-  client:
-    build:
-      context: client
-      dockerfile: DockerFile
-    ports:
-      - "3000:3000"
-    networks:
-      - webnet
-    env_file:
-      - "./client/react.env"
-    depends_on:
-      - server
-  db:
-    image: postgres
-    networks: 
-      - webnet
-    environment:
-      POSTGRES_PASSWORD: ${PSQL_PASS}
-      POSTGRES_DB: ${PSQL_DB}
-      POSTGRES_INITDB_ARGS: "-A md5"
+  # client:
+  #   build:
+  #     context: client
+  #     dockerfile: DockerFile
+  #   ports:
+  #     - "3000:3000"
+  #   networks:
+  #     - webnet
+  #   env_file:
+  #     - "./client/react.env"
+  #   depends_on:
+  #     - server
+  # db:
+  #   image: postgres
+  #   networks: 
+  #     - webnet
+  #   environment:
+  #     POSTGRES_PASSWORD: ${PSQL_PASS}
+  #     POSTGRES_DB: ${PSQL_DB}
+  #     POSTGRES_INITDB_ARGS: "-A md5"
   server:
     build:
       context: server
@@ -30,9 +30,9 @@ services:
     networks:
       - webnet  
     env_file: 
-      - "./client_api/rocket.env"
-    depends_on: 
-      - db    
+      - "./server/rocket.env"
+    # depends_on: 
+    #   - db    
   # panel:
   #   build: 
   #     context: aws_api
