--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -9,8 +9,8 @@ edition = "2018"
 [dependencies]
 rocket = "0.4.8"
 rocket_cors = "0.5.2"
-postgres = "0.19.2"
 dotenv = "0.15.0"
 rocket_contrib = "0.4.10"
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
+dhb-postgres-heroku = "0.1.0-alpha.2"
