--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -16,4 +16,7 @@ serde_json = "1.0.79"
 dhb-postgres-heroku = "0.1.0-alpha.2"
 aws-config = "0.9.0"
 aws-sdk-s3 = "0.9.0"
+aws-smithy-http = "0.40.2"
 tokio = { version = "1", features = ["full"] }
+zip = "0.6.2"
+bytes = "1"
