--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -14,7 +14,7 @@ rocket_contrib = "0.4.10"
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
 dhb-postgres-heroku = "0.1.0-alpha.2"
-redis = { version = "0.21.5", features = ["tokio-comp"] }
+r2d2_redis = "0.14.0"
 aws-config = "0.9.0"
 aws-sdk-s3 = "0.9.0"
 aws-smithy-http = "0.40.2"
