--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -13,6 +13,7 @@ dotenv = "0.15.0"
 rocket_contrib = "0.4.10"
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
+ron = "0.7.0"
 dhb-postgres-heroku = "0.1.0-alpha.2"
 r2d2_redis = "0.14.0"
 aws-config = "0.9.0"
