enable form data to be received to new route for emails, stage for sending mail

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -22,3 +22,5 @@ aws-smithy-http = "0.40.2"
 tokio = { version = "1", features = ["full"] }
 zip = "0.6.2"
 bytes = "1"
+lettre = "0.9"
+lettre_email = "0.9"
