--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -5,15 +5,13 @@ FROM node:13.12.0-alpine
 WORKDIR /usr/src/client
 
 # install app dependencies
-COPY ./public ./public
-COPY ./src ./src
-COPY ./package.json ./
+COPY ./build ./build
+COPY ./.env ./
 
-RUN npm install 
+RUN npm install
 RUN npm install -g serve
 
 EXPOSE 3000
 
-RUN npm run build
 # start app
 CMD serve -s build
