--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,6 @@ services:
       - "3000:3000"
     networks:
       - webnet
-    # env_file:
-    #   - "./client/.env"
     depends_on:
       - server
   server:
@@ -21,7 +19,14 @@ services:
       - "8000:8000"
     networks:
       - webnet  
-    # env_file: 
-    #   - "./server/rocket.env"
+  nginx:
+    image: nginx
+    ports:
+      - "80:80"
+    networks:
+      - webnet
+    depends_on:
+      - gateway
+      - panel
 networks:
   webnet:
