--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "daisyui": "^2.14.2",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "uninstall": "^0.0.0"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
