--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "daisyui": "^2.14.2",
+    "framer-motion": "^6.3.3",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
