--- a/package.json
+++ b/package.json
@@ -8,14 +8,11 @@
   "dependencies": {
     "daisyui": "^2.14.2",
     "framer-motion": "^6.3.3",
-    "gsap": "^3.10.4",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "uninstall": "^0.0.0"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@types/gsap": "^3.0.0",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.5",
