--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "chart.js": "^3.7.1",
     "daisyui": "^2.14.2",
     "framer-motion": "^6.3.3",
     "next": "latest",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
