--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "chart.js": "^3.7.1",
     "daisyui": "^2.14.2",
+    "dedent-js": "^1.0.1",
     "framer-motion": "^6.3.3",
     "next": "latest",
     "react": "^17.0.2",
