--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "daisyui": "^2.14.2",
     "dedent-js": "^1.0.1",
     "framer-motion": "^6.3.3",
+    "lodash": "^4.17.21",
     "next": "latest",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.1.0",
@@ -17,6 +18,7 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.5",
