--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/page-flip": "^2.0.0",
     "chart.js": "^3.7.1",
     "daisyui": "^2.14.2",
     "dedent-js": "^1.0.1",
