--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "daisyui": "^2.14.2",
     "dedent-js": "^1.0.1",
     "framer-motion": "^6.3.3",
+    "ioredis": "^5.1.0",
     "lodash": "^4.17.21",
     "next": "latest",
     "react": "^17.0.2",
