centralize all warnings and errors to send as payload logger to email service

--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "@types/page-flip": "^2.0.0",
     "chart.js": "^3.7.1",
     "daisyui": "^2.14.2",
-    "dedent-js": "^1.0.1",
     "framer-motion": "^6.3.3",
     "ioredis": "^5.1.0",
     "lodash": "^4.17.21",
+    "moment-timezone": "^0.5.34",
     "next": "latest",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.1.0",
