--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,11 +15,11 @@
     "jsx": "preserve",
     "incremental": true,
     "baseUrl": "./",
-    "paths": {
-      "@components/*": ["components/*"],
-      "@UI/*": ["UI/*"],
-      "@hooks/*": ["hooks/*"],
-    }
+    // "paths": {
+      // "@components/*": ["components/*"],
+      // "@UI/*": ["UI/*"],
+      // "@hooks/*": ["hooks/*"],
+    // }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
