--- a/package.json
+++ b/package.json
@@ -7,22 +7,35 @@
   },
   "dependencies": {
     "@types/page-flip": "^2.0.0",
+    "archiver": "^5.3.1",
+    "aws-sdk": "^2.1204.0",
     "chart.js": "^3.7.1",
+    "crypto-js": "^4.1.1",
     "daisyui": "^2.14.2",
+    "file-type": "^18.0.0",
     "framer-motion": "^6.5.1",
     "ioredis": "^5.1.0",
     "lodash": "^4.17.21",
     "moment-timezone": "^0.5.34",
+    "multer": "^1.4.5-lts.1",
     "next": "latest",
+    "next-connect": "^0.13.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.1.0",
     "react-countup": "^6.2.0",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "stream-buffers": "^3.0.2",
+    "unzipper": "^0.10.11"
   },
   "devDependencies": {
+    "@types/archiver": "^5.3.1",
+    "@types/crypto-js": "^4.1.1",
     "@types/lodash": "^4.14.182",
+    "@types/multer": "^1.4.7",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
+    "@types/stream-buffers": "^3.0.4",
+    "@types/unzipper": "^0.10.5",
     "autoprefixer": "^10.4.5",
     "postcss": "^8.4.12",
     "prettier": "^2.5.1",
