--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "chart.js": "^3.7.1",
     "crypto-js": "^4.1.1",
     "daisyui": "^2.14.2",
+    "dompurify": "^2.4.0",
     "file-type": "^18.0.0",
     "framer-motion": "^6.5.1",
+    "html-react-parser": "^3.0.4",
     "ioredis": "^5.1.0",
     "lodash": "^4.17.21",
     "moment-timezone": "^0.5.34",
@@ -30,6 +32,7 @@
   "devDependencies": {
     "@types/archiver": "^5.3.1",
     "@types/crypto-js": "^4.1.1",
+    "@types/dompurify": "^2.3.4",
     "@types/lodash": "^4.14.182",
     "@types/multer": "^1.4.7",
     "@types/node": "17.0.4",
