--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "dompurify": "^2.4.0",
     "file-type": "^18.0.0",
     "framer-motion": "^6.5.1",
-    "html-react-parser": "^3.0.4",
     "ioredis": "^5.1.0",
     "lodash": "^4.17.21",
     "moment-timezone": "^0.5.34",
@@ -26,6 +25,7 @@
     "react-chartjs-2": "^4.1.0",
     "react-countup": "^6.2.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.4.0",
     "stream-buffers": "^3.0.2",
     "unzipper": "^0.10.11"
   },
