--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "multer": "^1.4.5-lts.1",
     "next": "latest",
     "next-connect": "^0.13.0",
+    "popmotion": "^11.0.5",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.1.0",
     "react-countup": "^6.2.0",
