--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lodash": "^4.17.21",
     "moment-timezone": "^0.5.34",
     "multer": "^1.4.5-lts.1",
-    "next": "latest",
+    "next": "12.3.1",
     "next-connect": "^0.13.0",
     "popmotion": "^11.0.5",
     "react": "^17.0.2",
