--- a/package.json
+++ b/package.json
@@ -14,19 +14,20 @@
     "crypto-js": "^4.1.1",
     "daisyui": "^2.14.2",
     "dompurify": "^2.4.0",
+    "eslint-config-next": "^13.4.2",
     "file-type": "^18.0.0",
     "framer-motion": "^6.5.1",
     "ioredis": "^5.1.0",
     "lodash": "^4.17.21",
     "moment-timezone": "^0.5.34",
     "multer": "^1.4.5-lts.1",
-    "next": "12.3.1",
+    "next": "^13.4.2",
     "next-connect": "^0.13.0",
     "popmotion": "^11.0.5",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-chartjs-2": "^4.1.0",
     "react-countup": "^6.2.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "stream-buffers": "^3.0.2",
     "unzipper": "^0.10.11"
@@ -37,8 +38,9 @@
     "@types/dompurify": "^2.3.4",
     "@types/lodash": "^4.14.182",
     "@types/multer": "^1.4.7",
-    "@types/node": "17.0.4",
-    "@types/react": "17.0.38",
+    "@types/node": "^18.15.5",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "@types/stream-buffers": "^3.0.4",
     "@types/unzipper": "^0.10.5",
     "autoprefixer": "^10.4.5",
@@ -46,6 +48,6 @@
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
     "tailwindcss": "^3.0.24",
-    "typescript": "4.5.4"
+    "typescript": "^5.0.4"
   }
 }
