--- a/package.json
+++ b/package.json
@@ -6,45 +6,45 @@
     "start": "next start"
   },
   "dependencies": {
-    "@types/page-flip": "^2.0.0",
-    "archiver": "^5.3.1",
-    "aws-sdk": "^2.1204.0",
-    "chart.js": "^3.7.1",
-    "crypto-js": "^4.1.1",
-    "daisyui": "^2.14.2",
-    "dompurify": "^2.4.0",
-    "file-type": "^18.0.0",
-    "framer-motion": "^6.5.1",
-    "ioredis": "^5.1.0",
+    "@types/page-flip": "^2.0.3",
+    "archiver": "^6.0.1",
+    "aws-sdk": "^2.1566.0",
+    "chart.js": "^4.4.1",
+    "crypto-js": "^4.2.0",
+    "daisyui": "^4.7.2",
+    "dompurify": "^3.0.9",
+    "file-type": "^19.0.0",
+    "framer-motion": "^11.0.6",
+    "ioredis": "^5.3.2",
     "lodash": "^4.17.21",
-    "moment-timezone": "^0.5.34",
-    "multer": "^1.4.5-lts.1",
-    "next": "latest",
-    "next-connect": "^0.13.0",
+    "moment-timezone": "^0.5.45",
+    "multer": "1.4.5-lts.1",
+    "next": "^14.1.0",
+    "next-connect": "^1.0.0",
     "popmotion": "^11.0.5",
-    "react": "^17.0.2",
-    "react-chartjs-2": "^4.1.0",
-    "react-countup": "^6.2.0",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.4.0",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-countup": "^6.5.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "stream-buffers": "^3.0.2",
-    "unzipper": "^0.10.11"
+    "unzipper": "^0.10.14"
   },
   "devDependencies": {
-    "@types/archiver": "^5.3.1",
-    "@types/crypto-js": "^4.1.1",
-    "@types/dompurify": "^2.3.4",
-    "@types/lodash": "^4.14.182",
-    "@types/multer": "^1.4.7",
-    "@types/node": "17.0.4",
-    "@types/react": "17.0.38",
-    "@types/stream-buffers": "^3.0.4",
-    "@types/unzipper": "^0.10.5",
-    "autoprefixer": "^10.4.5",
-    "postcss": "^8.4.12",
-    "prettier": "^2.5.1",
-    "prettier-plugin-tailwindcss": "^0.1.1",
-    "tailwindcss": "^3.0.24",
-    "typescript": "4.5.4"
+    "@types/archiver": "^6.0.2",
+    "@types/crypto-js": "^4.2.2",
+    "@types/dompurify": "^3.0.5",
+    "@types/lodash": "^4.14.202",
+    "@types/multer": "^1.4.11",
+    "@types/node": "20.11.20",
+    "@types/react": "18.2.59",
+    "@types/stream-buffers": "^3.0.7",
+    "@types/unzipper": "^0.10.9",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.3.3"
   }
 }
