--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "moment-timezone": "^0.5.45",
     "multer": "1.4.5-lts.1",
     "next": "^14.1.0",
-    "next-connect": "^1.0.0",
+    "next-connect": "0.12.2",
     "popmotion": "^11.0.5",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
